erDiagram
  PAGES {
    string _id
    string space_id
    string slug
    string title
    string head_revision_id
    datetime created_at
    datetime updated_at
  }

  REVISIONS {
    string _id
    string page_id
    string author_id
    string base_revision_id
    string content_markdown
    string content_hash
    datetime created_at
  }

  PAGE_HEAD {
    string _id
    string head_revision_id
    string space_id
    string slug
    datetime updated_at
    string permission_snapshot
  }

  PAGE_SNAPSHOTS {
    string _id
    string page_id
    string revision_id
    string html
    string toc
    datetime created_at
  }

  PAGES ||--o{ REVISIONS : has
  PAGE_HEAD ||--o{ PAGE_SNAPSHOTS : points_to
